--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <!-- META -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="uisual" content="Made with Uisual (uisual.com)">
-    <meta name="author" content="#">
-    <meta name="description" content="#">
-    <meta name="referrer" content="unsafe-url">
-    <meta name="robots" content="index, follow">
+    <meta name="author" content="Arlie Jackson">
+    <meta name="description" content="Arlie's personal and professional website">
+    <meta name="robots" content="noimageindex">
+    <meta name="googlebot-image" content="noindex">
+    <meta name="MSNBot-Media" content="noindex">
     <!-- SPEED -->
     <link rel="preconnect" href="https://res.cloudinary.com">
     <link rel="dns-prefetch" href="https://res.cloudinary.com">
@@ -19,7 +19,7 @@
     <!-- LINK -->
     <link rel="me" href="#">
     <link rel="canonical" href="#">
-    <link rel="icon" type="image/png" href="#" sizes="48x48">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/QtdsgXHt/Screenshot-2023-08-01-at-11-19-30-AM.png" sizes="48x48">
     <!-- PERFORMANCE -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
     <link rel="preload" as="style" href="style.css">
