--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="preload" as="style" href="style.css">
     <link rel="stylesheet" href="style.css">
     <!-- TITLE -->
-    <title>Layer: Free Landing Page Template from Uisual</title>
+    <title>Arlena Jackson</title>
   </head>
   <body>
     <header role="banner" class="ui-section-header">
@@ -42,8 +42,7 @@
           <label for="ui-section-header--menu-id" class="ui-section-header--menu-icon"></label>
           <!-- MENU -->
           <nav role="navigation" class="ui-section-header--nav ui-layout-flex">
-            <a href="#" role="link" aria-label="#" class="ui-section-header--nav-link">Features</a>
-            <a href="#" role="link" aria-label="#" class="ui-section-header--nav-link">Pricing</a>
+            <a href="agjackson.github.io/about" role="link" aria-label="#" class="ui-section-header--nav-link">Features</a>
             <a href="#" role="link" aria-label="#" class="ui-section-header--nav-link">About</a>
           </nav>
         </div>
