--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
           <div class="ui-section-hero__layout ui-layout-grid ui-layout-grid-2">
             <!-- COPYWRITING -->
             <div>
-              <h1>Design better.</h1>
-              <p class="ui-text-intro">Lorem ipsum dolor sit amet, consectetur lit, enimad eiusmod tempor incididunt ut labore et dolore magna aliqua ullamco laboris nisi.</p>
+              <h1>Hi, I'm Arlie</h1>
+              <p class="ui-text-intro">I'm a Computer Science student at the University of Chicago.</p>
               <!-- CTA -->
               <div class="ui-component-cta ui-layout-flex">
-                <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Get Started for Free</a>
-                <p class="ui-text-note"><small>30 days free trial.</small></p>
+                <a href="https://docs.google.com/document/d/1-rlyT_KVb0k4dGtRgtY6u390ZqJauxNSChNhUiPAKM8/edit" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">My Resume</a>
+                <p class="ui-text-note"><small>Check it out!</small></p>
               </div>
             </div>
             <!-- IMAGE -->
