--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
           <div class="ui-section-hero__layout ui-layout-grid ui-layout-grid-2">
             <!-- COPYWRITING -->
             <div>
-              <h1>Hi, I'm Arlie</h1>
+              <h1>Nice to meet you, I'm Arlie.</h1>
               <p class="ui-text-intro">I'm a Computer Science student at the University of Chicago.</p>
               <!-- CTA -->
               <div class="ui-component-cta ui-layout-flex">
-                <a href="https://docs.google.com/document/d/1-rlyT_KVb0k4dGtRgtY6u390ZqJauxNSChNhUiPAKM8/edit" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">My Resume</a>
+                <a href="https://docs.google.com/document/d/1-rlyT_KVb0k4dGtRgtY6u390ZqJauxNSChNhUiPAKM8/edit" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">See my Resume</a>
                 <p class="ui-text-note"><small>Check it out!</small></p>
               </div>
             </div>
             <!-- IMAGE -->
-            <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png" loading="lazy" alt="#" class="ui-image-half-right">
+            <img src="https://i.postimg.cc/8c2ynZXb/Screenshot-2023-08-04-at-12-46-26-PM.png" loading="lazy" alt="#" class="ui-image-half-right">
           </div>
         </div>
       </section>
